// protoc --go_out=plugins=grpc:. *.proto

syntax = "proto3";
package pb;

service Game {
    rpc Connect(stream GameClientData) returns (stream GameServerData);
}

message GameClientData {
    oneof data {
        GameInitRequest init = 1;
        GameBuyRequest buy = 2;
        GameInputRequest input = 3;
    }
}

message GameServerData {
    oneof data {
        GameInitResponse init = 1;
        GameBuyResponse buy = 2;
        GameStateResponse state = 3;
    }
}

message GameInitRequest {
    uint64 user_id = 1;
}

message GameInitResponse {
    bool success = 1;
    string error = 2;
}

message GameBuyRequest {
    int32 weapon_id = 1;
}

message GameBuyResponse {
    bool success = 1;
    string error = 2;
}

message GameInputRequest {
    string input_key = 1;
}

message GameStateResponse {
    repeated GamePlayerData players = 1;
}

message GamePlayerData {
    uint64 user_id = 1;
    bool teammate = 2;
    bool known_pos = 3;
    float pos_x = 4;
    float pos_y = 5;
    float pos_z = 6;
    float orientation_x = 7;
    float orientation_y = 8;
    float orientation_z = 9;
    bool dead = 10;
    bool connected = 11;
    int32 equipped_weapon = 12;
    int32 score_kills = 13;
    int32 score_deaths = 14;
    int32 score_assissts = 15;
    int32 money = 16;
}